# fmi

semester1/up/code/helloworld/: main.cpp
semester1/up/code/hw1/: 1.cpp  2.cpp  3.cpp
semester1/up/code/hw2/: homework2.cpp
semester1/up/code/hw3/: hw3.cpp
semester1/up/code/lec1/: kake.cpp
semester1/up/code/lec2/: CMakeCache.txt  main.cpp
semester1/up/code/practice/exam/: main.cpp
semester1/up/code/practice/week05/: main.cpp
semester1/up/code/practice/week06/: main.cpp
semester1/up/code/practice/week09/: test.cpp  week09.cpp  zad3In.txt  zad3Out.txt  zad4.txt  zad5.txt
semester1/up/code/practice/week10/: Point.h  Student.h  Time.h  main.cpp  students.txt
semester1/up/code/practice/week11/: main.cpp
semester1/up/code/practice/week12/: main.cpp
semester1/up/code/practice/week14/: main.cpp
semester1/up/code/sem/13_11_2024/: main.cpp
semester1/up/code/sem/advanced/: main.cpp
semester1/up/code/sem/hanoiTowers/: main.cpp
semester1/up/code/sem/idk/: nz.cpp
semester1/up/exams/3/: 1.cpp  2.cpp  3.cpp
semester1/up/projects/checksumCalculator/: calculator.h  main.cpp
semester1/up/projects/test/: test.cpp
semester2/english/: Bridge presentation.txt
semester2/git/: .gitignore
semester2/git/5_/: lec5.txt
semester2/oop/code/homework/homework1/: CMakeLists.txt
semester2/oop/code/homework/hw1/src/: CMakeLists.txt  registration_plate.cpp  registration_plate.h
semester2/oop/code/homework/hw_1/test/: CMakeLists.txt  test_registration_plate.cpp  test_ucn.cpp  test_vehicle_register.cpp
semester2/oop/code/lecture/lec1/: main.cpp  main2.cpp
semester2/oop/code/lecture/lec2/: CMakeLists.txt  libarary.cpp  library.h  main.cpp
semester2/oop/code/lecture/lec5_streams/: main.cpp  test.txt
semester2/oop/code/lecture/lec6_namespaces_classes/: main.cpp  structs.cpp
semester2/oop/code/seminar/: subjects.txt
(+64 files in other folders)
